# yen

./: LICENSE  README.adoc  README.md  example_josephon_junction.ipynb  example_noised_oscillator.ipynb  example_radau_usage.ipynb  example_usage.ipynb  pyproject.toml
tests/: scipy-comparison.py  simple.py
tests/asolver/: asolver-rober-arenstorf.py
tests/dop853/: arenstorf.py  dop853-arenstorf.py  dop853-jacobi-energy-perservation.py  dop853-scipy-comparison.py  jacobi-energy-perservation.py  scipy-comparison.py  simple.py
tests/radau/: radau-rober.py  radau-scipy-comparison.py  radau-vanderpol.py
tests/rk4/: rk4-kepler-conservation.py  rk4-lotka-volterra-conservation.py
tests/rk45/: rk45-kepler-consevration.py  rk45-scipy-comparison.py
yen/: __init__.py  accuracy_test.py  dop853.py  dop853_constants.py  rk45.py
yennefer/: __init__.py  asolver.py  dop853.py  dop853_constants.py  radau.py  radau_constants.py  rk4.py  rk45.py  utils.py
