[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yennefer"
version = "0.2.0"
description = "Fast numerical ODE solvers (RK4, RK45, DOP853) optimized with Numba."
readme = "README.md"
authors = [
    { name = "Gregory Shipunov (aka GrindelfP.)", email = "grindelf.perlomutrovij@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "numba"
]

[tool.setuptools.packages.find]
include = ["yen*"]
